test/errhandling/lydia/notAnErrorSubtype-thrown.future
error message: throwing something that is not an Error subtype
#11403
